examples/vim/output/step-02-text-entered.txt
 /p/t/shellwright-vim-test.txt+                                         buffers 
    1 Hello from Shellwright!                                                   
    2                                                                           
    3 This text was typed by an AI agent.                                       
~                                                                               
~                                                                               
~                                                                               
~                                                                               
~                                                                               
~                                                                               
~                                                                               
~                                                                               
~                                                                               
~                                                                               
~                                                                               
~                                                                               
~                                                                               
~                                                                               
~                                                                               
~                                                                               
~                                                                               
~                                                                               
 INSERT  </tmp/shellwright-vim-test.txt[+]   tex…  [unix]  11W 100% ㏑:3/3≡℅:36  
-- INSERT --                                                                    